# igoprotect

./: README.md  i-go-protect.code-workspace
.github/workflows/: frontend-cd.yaml  frontend-ci.yaml  i-go-protect-cd.yaml  i-go-protect-ci.yaml
pitch/: pitch.pptx
projects/frontend/: .algokit.toml  .copier-answers.yml  .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
projects/frontend/src/: App.tsx  Home.tsx  noticeboardAppID.tsx
projects/frontend/src/components/: Account.tsx  ClearState.tsx  ConfirmWithdrawal.tsx  (+16 more)
projects/i-go-protect/: .algokit.toml  .copier-answers.yml  README.md  pyproject.toml
projects/i-go-protect/.tours/: getting-started-with-your-algokit-project.tour
projects/i-go-protect/smart_contracts/: README.md  __main__.py
projects/i-go-protect/tests/: conftest.py  delegator_contract_test.py  factory_validator_ad_test.py  general_validator_ad_test.py  noticeboard_delegator_test.py  noticeboard_test.py
projects/i-go-protect/validator-script/: Bouncer.py  DelegatorContractClient.py  GeneralValidatorAdClient.py  Locksmith.py  NoticeboardClient.py  README-notes.md  README.md  default.config  igoprotect_validator_script-0.0.1-py3-none-any.whl  requirements.txt  utils.py  validator_script.py
projects/i-go-protect/validator-script/igoprotect_validator_script/: LICENSE  README.md  pyproject.toml
projects/i-go-protect/validator-script/igoprotect_validator_script/src/igoprotect_validator_script/: __init__.py
projects/igoprotect_validator_script/: .gitignore  README.md  default.config  requirements.txt  run_validator.py
(+58 files in other folders)
