[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "igoprotect_validator_script"
version = "0.0.1"
authors = [
  { name="Alex", email="alexander.marinsek@gmail.com" },
]
description = "IgoProtect validator script."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "algokit-utils==2.3.0",
    "anyio==4.4.0",
    "certifi==2024.6.2",
    "cffi==1.16.0",
    "Deprecated==1.2.14",
    "h11==0.14.0",
    "httpcore==0.16.3",
    "httpx==0.23.3",
    "idna==3.7",
    "msgpack==1.0.8",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "py-algorand-sdk==2.6.1",
    "pycparser==2.22",
    "pycryptodomex==3.20.0",
    "PyNaCl==1.5.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "rfc3986==1.5.0",
    "six==1.16.0",
    "sniffio==1.3.1",
    "typing_extensions==4.12.2",
    "tzdata==2024.1",
    "wrapt==1.16.0"
]


[project.urls]
Homepage = "https://github.com/uhudo/igoprotect"
Issues = "https://github.com/uhudo/igoprotect"